exports[`Wizard Component should render different components 1`] = `
<div
  className="wizard">
  <h1>
    Welcome
  </h1>
  <img
    height="120"
    src="test-file-stub"
    width="120" />
  <button
    className="coz-btn coz-btn--regular"
    onClick={[Function]}
    role="button" />
</div>
`;

exports[`Wizard Component should render different components 2`] = `
<div
  className="wizard">
  <p />
  <input
    placeholder={undefined}
    type="text" />
  <p />
  <button
    className="coz-btn coz-btn--regular"
    onClick={undefined}
    role="button" />
</div>
`;
